force-app/main/default/objects/Stand_Setting__c/Stand_Setting__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Child of Edition. This will set the stand visibility on the home page of a particular event.</description>
    <label>Stand Setting</label>
    <nameField>
        <label>Stand Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stand Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>