force-app/main/default/objects/Stand_Setting__c/fields/Allow_Contractor_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Allow_Contractor_Nomination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allow Contractor Nomination</description>
    <label>Allow Contractor Nomination</label>
    <type>Checkbox</type>
</CustomField>