force-app/main/default/objects/Stand_Setting__c/fields/Allow_Stand_Design_Submission__c.field-meta.xml
<CustomField>
    <fullName>Allow_Stand_Design_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Stand Design Submission</description>
    <label>Allow Stand Design Submission</label>
    <type>Checkbox</type>
</CustomField>