force-app/main/default/objects/Stand_Setting__c/fields/Complex_Stand_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Complex_Stand_Instructions__c</fullName>
    <label>Complex Stand Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>