force-app/main/default/objects/Stand_Setting__c/fields/Disable_Build_My_Own_Stand__c.field-meta.xml
<CustomField>
    <fullName>Disable_Build_My_Own_Stand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Build My Own Stand</label>
    <type>Checkbox</type>
</CustomField>