force-app/main/default/objects/Stand_Setting__c/fields/Email_IDs_For_New_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Email_IDs_For_New_Contractor__c</fullName>
    <label>Email IDs to Notify for New Contractor</label>
    <type>TextArea</type>
</CustomField>