force-app/main/default/objects/Stand_Setting__c/fields/Email_IDs_to_Notify_for_Stand_Submission__c.field-meta.xml
<CustomField>
    <fullName>Email_IDs_to_Notify_for_Stand_Submission__c</fullName>
    <description>Enter comma separated email addresses to received email notification when a custom submit stand design</description>
    <inlineHelpText>Enter comma separated email addresses to received email notification when a custom submit stand design</inlineHelpText>
    <label>Email IDs to Notify for Stand Submission</label>
    <type>TextArea</type>
</CustomField>