force-app/main/default/objects/Stand_Setting__c/fields/Hide_Stand_Design_Questions__c.field-meta.xml
<CustomField>
    <fullName>Hide_Stand_Design_Questions__c</fullName>
    <description>Hide Stand Design Questions, Please don&apos;t change API Name of options.</description>
    <label>Hide Stand Design Questions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibitor Name</fullName>
                <label>Step 1:- Exhibitor Name</label>
            </value>
            <value>
                <fullName>Stand No.</fullName>
                <label>Step 1:- Stand No.</label>
            </value>
            <value>
                <fullName>Hall</fullName>
                <label>Step 1:- Hall</label>
            </value>
            <value>
                <fullName>Dimension</fullName>
                <label>Step 1:- Dimension</label>
            </value>
            <value>
                <fullName>Area</fullName>
                <label>Step 1:- Area</label>
            </value>
            <value>
                <fullName>Contractor Company</fullName>
                <label>Step 1:- Contractor Company</label>
            </value>
            <value>
                <fullName>Contractor Country</fullName>
                <label>Step 1:- Contractor Country</label>
            </value>
            <value>
                <fullName>Contractor Contact Name</fullName>
                <label>Step 1:- Contractor Contact Name</label>
            </value>
            <value>
                <fullName>Contractor Contact Email</fullName>
                <label>Step 1:- Contractor Contact Email</label>
            </value>
            <value>
                <fullName>Contractor Contact Number</fullName>
                <label>Step 1:- Contractor Contact Number</label>
            </value>
            <value>
                <fullName>Are you going to use Subcontractor?</fullName>
                <label>Step 1:- Are you going to use Subcontractor?</label>
            </value>
            <value>
                <fullName>Subcontractor Company</fullName>
                <label>Step 1:- Subcontractor Company</label>
            </value>
            <value>
                <fullName>Subcontractor Country</fullName>
                <label>Step 1:- Subcontractor Country</label>
            </value>
            <value>
                <fullName>Subcontractor Contact Name</fullName>
                <label>Step 1:- Subcontractor Contact Name</label>
            </value>
            <value>
                <fullName>Subcontractor Contact Email</fullName>
                <label>Step 1:- Subcontractor Contact Email</label>
            </value>
            <value>
                <fullName>Subcontractor Contact Number</fullName>
                <label>Step 1:- Subcontractor Contact Number</label>
            </value>
            <value>
                <fullName>Task/Activity</fullName>
                <label>Step 1:- Task/Activity</label>
            </value>
            <value>
                <fullName>Onsite Health and Safety Contact Name</fullName>
                <label>Step 1:- Onsite Health and Safety Contact Name</label>
            </value>
            <value>
                <fullName>Onsite Health and Safety Contact Number</fullName>
                <label>Step 1:- Onsite Health and Safety Contact Number</label>
            </value>
            <value>
                <fullName>Onsite Health and Safety Contact Email</fullName>
                <label>Step 1:- Onsite Health and Safety Contact Email</label>
            </value>
            <value>
                <fullName>Hold Public liability insurance</fullName>
                <label>Step 1:- Hold Public liability insurance</label>
            </value>
            <value>
                <fullName>Onsite welfare facilities awareness</fullName>
                <label>Step 1:- Onsite welfare facilities awareness</label>
            </value>
            <value>
                <fullName>Contractor Travel less than 80km</fullName>
                <label>Step 1:- Contractor Travel less than 80km</label>
            </value>
            <value>
                <fullName>Stand Number</fullName>
                <label>Step 3:- Stand Number</label>
            </value>
            <value>
                <fullName>Step 3 - Dimensions</fullName>
                <label>Step 3:- Dimensions</label>
            </value>
            <value>
                <fullName>Step 3 - Area</fullName>
                <label>Step 3:- Area</label>
            </value>
            <value>
                <fullName>Number of open sides?</fullName>
                <label>Step 3:- Number of open sides?</label>
            </value>
            <value>
                <fullName>Sustainable Stand</fullName>
                <label>Step 3:- Sustainable Stand</label>
            </value>
            <value>
                <fullName>Double Decker Stand</fullName>
                <label>Step 3:- Double Decker Stand</label>
            </value>
            <value>
                <fullName>Include rigging in the design</fullName>
                <label>Step 3:- Include rigging in the design</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>