force-app/main/default/objects/Stand_Setting__c/fields/Is_Email_Send_For_Stand_Submission__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Send_For_Stand_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Send For Stand Submission?</label>
    <type>Checkbox</type>
</CustomField>