force-app/main/default/objects/Stand_Setting__c/fields/Is_Send_Email_For_New_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Email_For_New_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then an email will send to entered email addresses for new nominated new contractor.</description>
    <inlineHelpText>If checked, then an email will send to entered email addresses for new nominated new contractor.</inlineHelpText>
    <label>Is Send Email For New Contractor?</label>
    <type>Checkbox</type>
</CustomField>