force-app/main/default/objects/Stand_Setting__c/fields/Manual_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Manual_Instructions__c</fullName>
    <label>Manual Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>