force-app/main/default/objects/Stand_Setting__c/fields/Maximum_Hours__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Hours__c</fullName>
    <inlineHelpText>Use to draw dropdown on stand design submissions page for Onsite Team Management (Build / Breakdown).
Minimum value must be greater than 6</inlineHelpText>
    <label>Maximum Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>78</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>