force-app/main/default/objects/Stand_Setting__c/fields/Maximum_Stand_Height__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Stand_Height__c</fullName>
    <label>Maximum Stand Height</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>