force-app/main/default/objects/Stand_Setting__c/fields/Maximum_Stand_Height_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Stand_Height_Decimal__c</fullName>
    <defaultValue>9</defaultValue>
    <label>Maximum Stand Height Decimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>