force-app/main/default/objects/Stand_Setting__c/fields/Non_Complex_Stand_Files__c.field-meta.xml
<CustomField>
    <fullName>Non_Complex_Stand_Files__c</fullName>
    <description>Non Complex Stand Files to be upload</description>
    <label>Non Complex Stand Files</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stand_Files</valueSetName>
    </valueSet>
</CustomField>