force-app/main/default/objects/Stand_Setting__c/fields/Non_Complex_Stand_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Non_Complex_Stand_Instructions__c</fullName>
    <label>Non-Complex Stand Instructions</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>