force-app/main/default/objects/Stand_Setting__c/fields/Unit_of_measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_measurement__c</fullName>
    <defaultValue>&quot;Meters&quot;</defaultValue>
    <description>Unit of measure for the dimension, area and stand height.</description>
    <inlineHelpText>Unit of measure for the dimension, area and stand height.</inlineHelpText>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>m</fullName>
                <label>Meter</label>
            </value>
            <value>
                <fullName>ft</fullName>
                <label>Feet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>